# LangGraphResearch

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/scripts/: chatbot.ipynb  export_graph_image.py
backend/src/: __init__.py  api_app.py  env_bootstrap.py  graph_generation.py  logging_config.py  logutil.py  router.py
backend/src/agents/: __init__.py  analyst.py  report_writer.py  researcher.py  state.py  summary.py  supervisor.py  utils.py
backend/src/prompts/: __init__.py  analyst.jinja  report_writer.jinja  researcher.jinja  summary.jinja  supervisor.jinja
backend/src/schemas/: __init__.py  pipeline.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/report/: ReportDocument.tsx  parseReport.ts
